[package]
name = "misaka-consensus-relay"
version = "0.1.0"
edition = "2021"
description = "MISAKA consensus vote relay — proposal/prevote/precommit handling, quorum tracking, commit trigger"

[dependencies]
misaka-crypto = { path = "../misaka-crypto" }
misaka-tx = { path = "../misaka-tx" }
misaka-store = { path = "../misaka-store" }
misaka-mempool = { path = "../misaka-mempool" }
misaka-block = { path = "../misaka-block" }
misaka-relay = { path = "../misaka-relay" }
misaka-consensus = { path = "../misaka-consensus" }
misaka-verify = { path = "../misaka-verify" }
misaka-wal = { path = "../misaka-wal" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
misaka-crypto = { path = "../misaka-crypto" }
