[package]
name = "misaka-testnet"
version = "0.1.0"
edition = "2021"
description = "MISAKA multi-node testnet orchestration — in-process virtual nodes for testing"

[dependencies]
misaka-crypto = { path = "../misaka-crypto" }
misaka-tx = { path = "../misaka-tx" }
misaka-store = { path = "../misaka-store" }
misaka-mempool = { path = "../misaka-mempool" }
misaka-block = { path = "../misaka-block" }
misaka-relay = { path = "../misaka-relay" }
misaka-consensus = { path = "../misaka-consensus" }
misaka-consensus-relay = { path = "../misaka-consensus-relay" }
misaka-node = { path = "../misaka-node" }
misaka-verify = { path = "../misaka-verify" }
misaka-wal = { path = "../misaka-wal" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
misaka-crypto = { path = "../misaka-crypto" }
